# datashare-extension-nlp-spacy

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pom.xml  pyproject.toml
.github/actions/pylint/: action.yml
.github/workflows/: linting-extension.yml  linting-worker.yml  publish-worker.yml  publish.yml  tests-extension.yml  tests-worker.yml  tests.yml
datashare-spacy-worker/: README.md  pyproject.toml
datashare-spacy-worker/spacy_worker/: app.py  benches.py  config.py  constants.py  core.py  ner_label_scheme.py  objects.py  utils.py
datashare-spacy-worker/spacy_worker/es/: __init__.py
datashare-spacy-worker/spacy_worker/tasks/: __init__.py  dependencies.py
datashare-spacy-worker/spacy_worker/tests/: conftest.py  test_benches.py  test_core.py  test_tasks.py
datashare_spacy_worker/: __main__.py  app.py  config.py  core.py  ner_label_scheme.py  objects.py  utils.py
datashare_spacy_worker/data/: .gitignore  models.json
datashare_spacy_worker/tasks/: __init__.py  dependencies.py
datashare_spacy_worker/tests/: conftest.py  test_tasks.py
hooks/: hook-spacy.py
qa/java/: checkstyle.xml
scripts/: worker_entrypoint.sh
src/main/java/org/icij/datashare/text/nlp/spacy/: SpacyPipeline.java
src/test/java/org/icij/datashare/text/nlp/spacy/: SpacyPipelineTest.java
tests/: conftest.py  test_core.py  test_tasks.py
