[tool.poetry]
name = "datashare-spacy-worker"
version = "0.1.4"
description = "Spacy NLP worker for Datashare"
authors = ["CleÌment Doumouro <cdoumouro@icij.org>"]
readme = "README.md"
packages = [{ include = "datashare_spacy_worker" }]
exclude = ["datashare_spacy_worker/tests"]

[tool.setuptools.packages.find]
where = ["datashare_spacy_worker/data/*.json"]

[tool.poetry.dependencies]
python = "^3.10"

icij-worker = { extras = ["amqp"], version = "^0.11.16" }
icij-common = { extras = ["elasticsearch"], version = "^0.5.3" }
# TODO: it seems that wheels are not built for spacy >= 3.7.6 for ARM
# TODO: optionnally add CUDA support for when a GPU is available
spacy = [
    { platform = "darwin", version = ">3.7,<3.7.6", extras = ["ja", "ko", "th", "apple"] },
    { version = ">3.7,<3.7.6", extras = ["ja", "ko", "th"] },
    { platform = "darwin", version = ">3.7,<3.7.6", extras = ["ja", "ko", "th", "transformers", "apple"], markers = "extra == 'transformers'"},
    { version = ">3.7,<3.7.6", extras = ["ja", "ko", "th", "transformers"], markers = "extra == 'transformers'"}
]
spacy-curated-transformers = { version = "^0.2.2", optional = true }

pycountry = "^24.6.1"
setuptools = "^75.5.0"
[tool.poetry.extras]
transformers = [
    "spacy-curated-transformers"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: integration test",
]