[project]
name = "datashare-extension-nlp-spacy"
version = "0.1.0"
description = "Spacy NLP worker for Datashare"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "icij-worker[amqp,postgres]~=0.18",
  "icij-common[elasticsearch]~=0.7.2",
  "pycountry~=24.6",
  "numpy<2.0",
  "setuptools~=75.5",
  "spacy[ja,ko,th]>3.7,<3.7.6; sys_platform != 'darwin'",
  "spacy[ja,ko,th,apple]>3.7,<3.7.6; sys_platform == 'darwin'",
  "spacy[ja,ko,th,transformers]>3.7,<3.7.6; sys_platform != 'darwin' and extra == 'transformers'",
  "spacy[ja,ko,th,apple,transformers]>3.7,<3.7.6; sys_platform == 'darwin' and extra == 'transformers'",
  "pydantic-settings>=2.8.1",
  "pydantic>=2.11.1",
]

[project.optional-dependencies]
transformers = [
  "spacy-curated-transformers~=0.2.2"
]

[dependency-groups]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.24",
  "requests~=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
packages = ["datashare_spacy_worker"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration: integration test",
]
